--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 asgiref==3.5.2
-# backports.zoneinfo==0.2.1
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
@@ -10,6 +9,7 @@ Django==4.1.1
 django-allauth==0.51.0
 django-bootstrap5==22.1
 django-heroku==0.3.1
+django-tinymce==3.5.0
 gunicorn==20.1.0
 idna==3.4
 oauthlib==3.2.1
