--- a/requirements.txt
+++ b/requirements.txt
@@ -8,17 +8,21 @@ dj-database-url==1.0.0
 Django==4.1.1
 django-allauth==0.51.0
 django-bootstrap5==22.1
+django-crispy-forms==1.14.0
 django-heroku==0.3.1
 django-tinymce==3.5.0
 gunicorn==20.1.0
 idna==3.4
 oauthlib==3.2.1
+Pillow==9.3.0
 psycopg2==2.9.3
 pycparser==2.21
 PyJWT==2.5.0
 python3-openid==3.2.0
 requests==2.28.1
 requests-oauthlib==1.3.1
+social-auth-app-django==5.0.0
+social-auth-core==4.3.0
 sqlparse==0.4.3
 types-cryptography==3.3.23
 tzdata==2022.2
