--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,31 @@
-asgiref==3.4.1
-certifi==2022.9.14
-distlib==0.3.6
-Django==3.2.16
-filelock==3.4.1
-importlib-metadata==4.8.3
-importlib-resources==5.4.0
-pipenv==2022.4.8
-platformdirs==2.4.0
-pytz==2022.2.1
+asgiref==3.5.2
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
+cryptography==38.0.1
+defusedxml==0.7.1
+dj-database-url==1.0.0
+Django==4.1.1
+django-allauth==0.51.0
+django-bootstrap5==22.1
+django-crispy-forms==1.14.0
+django-heroku==0.3.1
+django-tinymce==3.5.0
+gunicorn==20.1.0
+idna==3.4
+oauthlib==3.2.1
+Pillow==9.3.0
+psycopg2==2.9.3
+pycparser==2.21
+PyJWT==2.5.0
+python3-openid==3.2.0
+requests==2.28.1
+requests-oauthlib==1.3.1
+social-auth-app-django==5.0.0
+social-auth-core==4.3.0
 sqlparse==0.4.3
-typing_extensions==4.1.1
-virtualenv==20.16.5
-virtualenv-clone==0.5.7
-zipp==3.6.0
+types-cryptography==3.3.23
+tzdata==2022.2
+urllib3==1.26.12
+whitenoise==6.2.0
+# windows-curses==2.3.0
